// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Typography /> > <Bold /> > matchs snapshot 1`] = `
<div>
  <span
    class="bold"
  >
    Bold
  </span>
</div>
`;

exports[`<Typography /> > <Muted /> > matchs snapshot 1`] = `
<div>
  <span
    class="muted"
  >
    Muted
  </span>
</div>
`;

exports[`<Typography /> > <Text /> > matchs snapshot 1`] = `
<div>
  <p>
    Text
  </p>
</div>
`;

exports[`<Typography /> > <Title /> > level 1 - matchs snapshot 1`] = `
<div>
  <h1>
    First title
  </h1>
</div>
`;

exports[`<Typography /> > <Title /> > level 2 - matchs snapshot 1`] = `
<div>
  <h2>
    Second title
  </h2>
</div>
`;

exports[`<Typography /> > <Title /> > level 3 - matchs snapshot 1`] = `
<div>
  <h3>
    Third title
  </h3>
</div>
`;
